--- a/android/assets/jsons/translationsByLanguage/Malay.properties
+++ b/android/assets/jsons/translationsByLanguage/Malay.properties
@@ -738,6 +738,13 @@ Askia =
  # Requires translation!
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = 
 
+ # Requires translation!
+Spain = 
+ # Requires translation!
+Isabella = 
+ # Requires translation!
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
  # Requires translation!
@@ -772,7 +779,8 @@ One City Challenge =
 No barbarians = 
  # Requires translation!
 No ancient ruins = 
-
+ # Requires translation!
+No Natural Wonders = 
  # Requires translation!
 Victory conditions = 
  # Requires translation!
@@ -1098,6 +1106,10 @@ One of our trades with [nation] has been cut short =
 We have allied with [nation]. = 
  # Requires translation!
 We have lost alliance with [nation]. = 
+ # Requires translation!
+We have discovered [naturalWonder]! = 
+ # Requires translation!
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -1427,6 +1439,8 @@ Action =
 Defeated = 
  # Requires translation!
 Tiles = 
+ # Requires translation!
+Natural Wonders = 
 
 #Victory
 
@@ -2733,3 +2747,5 @@ Haka War Dance =
 -10% combat strength for adjacent enemy units = 
  # Requires translation!
 Rejuvenation = 
+ # Requires translation!
+All healing effects doubled = 
