--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -484,6 +484,13 @@ Songhai = Songhaj
 Askia = Asika
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Odtrymaj potrojone Złoto od Barbażyńskich obozowisk i plądrowanych Miast. Zaokrętowane jednostki mogą same się bronić
 
+ # Requires translation!
+Spain = 
+ # Requires translation!
+Isabella = 
+ # Requires translation!
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
 Uniques = Unikalne jednostki
@@ -502,7 +509,8 @@ Number of city-states = Liczba miast-państw
 One City Challenge = Wyzwanie z limitem 1 miasta
 No barbarians = Brak barbarzyńców
 No ancient ruins = Bez antycznych ruin
-
+ # Requires translation!
+No Natural Wonders = 
 Victory conditions = Warunki zwycięstwa
 Scientific = Naukowe
 Domination = Dominacja
@@ -677,6 +685,10 @@ One of our trades with [nation] has been cut short = Jedna z naszych wymian hand
 [nation] refused to stop settling cities near us! = Nacja [nation] nadal będzie zakładać nowe miasta w pobliżu nas!
 We have allied with [nation]. = Jesteśmy sojusznikami z [nation].
 We have lost alliance with [nation]. = Nie jesteśmy już w sojuszu z [nation].
+ # Requires translation!
+We have discovered [naturalWonder]! = 
+ # Requires translation!
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -904,6 +916,8 @@ Action =
 Defeated = 
  # Requires translation!
 Tiles = 
+ # Requires translation!
+Natural Wonders = 
 
 #Victory
 
@@ -1710,3 +1724,5 @@ Ambush II = Zasadzka II (lotnictwo)
 Haka War Dance = Haka - taniec wojenny
 -10% combat strength for adjacent enemy units = -10% walecznej siły dla jednostek przeciwnika leżących na przyległych polach
 Rejuvenation = Odnowienie
+ # Requires translation!
+All healing effects doubled = 
