--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -486,6 +486,13 @@ Songhai = Songhai
 Askia = Askia
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Recibe el triple de oro de campamentos bárbaros y ciudades saqueadoras. Las unidades embarcadas pueden defenderse.
 
+ # Requires translation!
+Spain = 
+ # Requires translation!
+Isabella = 
+ # Requires translation!
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
 Uniques = Exclusivos
@@ -504,7 +511,8 @@ Number of city-states = Número de ciudades-estado
 One City Challenge = Reto de una sola ciudad
 No barbarians = Sin bárbaros
 No ancient ruins = Sin ruinas antiguas
-
+ # Requires translation!
+No Natural Wonders = 
 Victory conditions = Condiciones de victoria
 Scientific = Científica
 Domination = Dominación
@@ -677,6 +685,10 @@ One of our trades with [nation] has been cut short = Uno de nuestros intercambio
 [nation] refused to stop settling cities near us! = ¡[nation] se negó dejar de establecer ciudades cerca de nosotros!
 We have allied with [nation]. = Nos hemos aliado con [nation].
 We have lost alliance with [nation]. = Ya no estamos aliados con [nation].
+ # Requires translation!
+We have discovered [naturalWonder]! = 
+ # Requires translation!
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -847,6 +859,8 @@ Closest city = Ciudad más cercana
 Action =  Acción
 Defeated = Derrotado
 Tiles = Casillas
+ # Requires translation!
+Natural Wonders = 
 
 #Victory
 
@@ -1123,7 +1137,6 @@ Theology = Teología
 Civil Service = Servicio civil
  # Requires translation!
 'The only thing that saves us from the bureaucracy is it inefficiency' - Eugene McCarthy = 
- # Requires translation!
 Enables Open Borders agreements = Habilita acuerdos de fronteras abiertas
 Guilds = Gremios
  # Requires translation!
@@ -1638,3 +1651,5 @@ Ambush II = Emboscada II
 Haka War Dance = Danza de la guerra Haka
 -10% combat strength for adjacent enemy units = -10% de fuerza de combate para unidades enemigas adyacentes
 Rejuvenation = Rejuvenecimiento
+ # Requires translation!
+All healing effects doubled = 
