--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -544,6 +544,13 @@ Songhai = Сонгаї
 Askia = Аскія
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Отримують утрічі більше золота з варварських таборів та розграблення міст. Підрозділи, які на воді, можуть захищатися. 
 
+ # Requires translation!
+Spain = 
+ # Requires translation!
+Isabella = 
+ # Requires translation!
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
 Uniques = Унікальні
@@ -562,7 +569,8 @@ Number of city-states = Міст-держав
 One City Challenge = Випробовування «Одне місто»
 No barbarians = Без варварів
 No ancient ruins = Немає древніх руїн
-
+ # Requires translation!
+No Natural Wonders = 
 Victory conditions = Умови перемоги
 Scientific = Наукова
 Domination = Загарбання
@@ -646,9 +654,7 @@ Map uploaded successfully! = Мапа вивантажена успішно!
 
 Options = Налаштування
 Display options = Налаштування екрану
- # Requires translation!
 Gameplay options = Налаштування ігроладу
- # Requires translation!
 Other options = Інші налаштування
 Turns between autosaves = Ходів між автозбереженням
 Sound effects volume = Гучність звуків
@@ -737,6 +743,10 @@ One of our trades with [nation] has been cut short = Достроково зак
 [nation] refused to stop settling cities near us! = [nation]: відмова не будувати міста поруч з нами!
 We have allied with [nation]. = Ми тепер союзники з [nation].
 We have lost alliance with [nation]. = Тепер ми не союзники з [nation].
+ # Requires translation!
+We have discovered [naturalWonder]! = 
+ # Requires translation!
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -874,7 +884,6 @@ vs [unitType] = проти [unitType]
 Terrain = Місцевість
 
 
- # Requires translation!
 Hurry Research = Поспішайте з дослідженнями
 Conduct Trade Mission = Проведення торговельної угоди
 Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = Ваша торгова місія з цивілізіцією «[civName]» принесла вам [goldAmount] золота та [influenceAmount] впливу!
@@ -908,6 +917,8 @@ Closest city = Найближче місто
 Action = Дія
 Defeated = Переможено
 Tiles = Клітини
+ # Requires translation!
+Natural Wonders = 
 
 #Victory
 
@@ -1576,25 +1587,16 @@ Impassible = Непрохідні
 
 # Natural Wonders
 
- # Requires translation!
 Barringer Crater = Аризонський кратер
- # Requires translation!
 Grand Mesa = Велика меса
- # Requires translation!
 Great Barrier Reef = Великий бар'єрний риф
- # Requires translation!
 Krakatoa = Кракатау
- # Requires translation!
 Mount Fuji = Гора Фудзі
  # Requires translation!
 Old Faithful = 
- # Requires translation!
 Rock of Gibraltar = Гібралтарська скеля
- # Requires translation!
 Cerro de Potosi = Серро-Ріко
- # Requires translation!
 El Dorado = Ельдорадо 
- # Requires translation!
 Fountain of Youth = Джерело вічної молодості
 
 # Resources
@@ -1797,7 +1799,6 @@ Unbuildable = Неможливо створити
 Can start an 8-turn golden age = Може почати золотий вік на 8 ходів
 Can build improvement: Landmark = Може будувати вдосконалення: Визначна пам’ятка
 Great Scientist = Видатний науковець
- # Requires translation!
 Can hurry technology research = Може пришвидшити технологічне дослідження
 Can build improvement: Academy = Може будувати вдосконалення: Академія
 Great Merchant = Видатний торговець
@@ -1812,7 +1813,8 @@ Bonus for units in 2 tile radius 15% = Підрозділи в радіусі 2 
 # Promotions
 
 Pick promotion = Обрати поліпшення
-OR  =  АБО 
+ # Requires translation!
+ OR  = 
 Bonus vs [unitType] = Перевага проти типу: [unitType]
 Penalty vs [unitType] = Поступається підрозділам типу: [unitType]
 Accuracy I = Точність I
@@ -1899,3 +1901,5 @@ Ambush II = Повітряна засідка II
 Haka War Dance = Бойовий танець Гака
 -10% combat strength for adjacent enemy units = Сусідні ворожі підрозділи отримують силу атаки -10%
 Rejuvenation = Відновлення здоров’я
+ # Requires translation!
+All healing effects doubled = 
