--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -849,6 +849,13 @@ Askia =
  # Requires translation!
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = 
 
+ # Requires translation!
+Spain = 
+ # Requires translation!
+Isabella = 
+ # Requires translation!
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
  # Requires translation!
@@ -883,7 +890,8 @@ One City Challenge =
 No barbarians = 
  # Requires translation!
 No ancient ruins = 
-
+ # Requires translation!
+No Natural Wonders = 
  # Requires translation!
 Victory conditions = 
  # Requires translation!
@@ -1209,6 +1217,10 @@ One of our trades with [nation] has been cut short =
 We have allied with [nation]. = 
  # Requires translation!
 We have lost alliance with [nation]. = 
+ # Requires translation!
+We have discovered [naturalWonder]! = 
+ # Requires translation!
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -1538,6 +1550,8 @@ Action =
 Defeated = 
  # Requires translation!
 Tiles = 
+ # Requires translation!
+Natural Wonders = 
 
 #Victory
 
@@ -2922,3 +2936,5 @@ Haka War Dance =
 -10% combat strength for adjacent enemy units = 
  # Requires translation!
 Rejuvenation = 
+ # Requires translation!
+All healing effects doubled = 
