--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -554,6 +554,13 @@ Songhai = Songhai
 Askia = 
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Receba 3x mais ouro de campos bárbaros e ao pilhar cidades. Unidades embarcadas podem se defender.
 
+ # Requires translation!
+Spain = 
+ # Requires translation!
+Isabella = 
+ # Requires translation!
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
 Uniques = Únicos(a)
@@ -577,7 +584,8 @@ Number of city-states = Número de cidades-estado
 One City Challenge = Desafio - Apenas Uma Cidade
 No barbarians = Sem bárbaros
 No ancient ruins = Sem ruínas antigas
-
+ # Requires translation!
+No Natural Wonders = 
 Victory conditions = Condições de vitória
 Scientific = Científica
 Domination = Dominação
@@ -789,6 +797,10 @@ One of our trades with [nation] has been cut short =
 We have allied with [nation]. = 
  # Requires translation!
 We have lost alliance with [nation]. = 
+ # Requires translation!
+We have discovered [naturalWonder]! = 
+ # Requires translation!
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -998,6 +1010,8 @@ Action =
 Defeated = Derrotado
  # Requires translation!
 Tiles = 
+ # Requires translation!
+Natural Wonders = 
 
 #Victory
 
@@ -1845,3 +1859,5 @@ Haka War Dance = Dança de Guerra Haka
 -10% combat strength for adjacent enemy units = -10% de força de combate para cada unidade inimiga adjacente
  # Requires translation!
 Rejuvenation = 
+ # Requires translation!
+All healing effects doubled = 
