Missing Tutorial names translation

--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -931,6 +931,26 @@ Clear improvements =
 Clear resource = 
 Requires = 
 
+# Civilopedia Tutorials names
+
+After Conquering = 
+City Range = 
+Contact Me = 
+Culture and Policies = 
+Embarking = 
+Enemy City = 
+Idle Units = 
+Injured Units = 
+Introduction = 
+Luxury Resource = 
+New Game = 
+Roads and Railroads = 
+Siege Units = 
+Strategic Resource = 
+Unhappiness = 
+Victory Types = 
+Workers = 
+
 # Policies
 
 Adopt policy = 
