--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -963,6 +963,43 @@ Clear improvements = 시설 지우기
 Clear resource = 자원 지우기
 Requires = 선행 조건
 
+# Civilopedia Tutorials names
+
+ # Requires translation!
+After Conquering = 
+ # Requires translation!
+City Range = 
+ # Requires translation!
+Contact Me = 
+ # Requires translation!
+Culture and Policies = 
+ # Requires translation!
+Embarking = 
+ # Requires translation!
+Enemy City = 
+ # Requires translation!
+Idle Units = 
+ # Requires translation!
+Injured Units = 
+ # Requires translation!
+Introduction = 
+ # Requires translation!
+Luxury Resource = 
+ # Requires translation!
+New Game = 
+ # Requires translation!
+Roads and Railroads = 
+ # Requires translation!
+Siege Units = 
+ # Requires translation!
+Strategic Resource = 
+ # Requires translation!
+Unhappiness = 
+ # Requires translation!
+Victory Types = 
+ # Requires translation!
+Workers = 
+
 # Policies
 
 Adopt policy = 정책 채택
