Last french translations

--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -107,7 +107,7 @@ Notre Dame = Notre-Dame
 
 Hagia Sophia = Sainte-Sophie
  # Requires translation!
-'For it soars to a height to match the sky, and as if surging up from among the other buildings it stands on high and looks down upon the remainder of the city, adorning it, because it is a part of it, but glorying in its own beauty'  - Procopius, De Aedificis = 
+'For it soars to a height to match the sky, and as if surging up from among the other buildings it stands on high and looks down upon the remainder of the city, adorning it, because it is a part of it, but glorying in its own beauty'  - Procopius, De Aedificis = 'Car il s'élève en hauteur pour rencontrer le ciel, et comme s'il surgissait des autres bâtiments, il se dresse et regarde d'en haut le reste de la ville, l'ornant, car il en fait partie, mais se glorifiant dans sa propre beauté' - Procope de Césarée, De Aedificis
 +33% great person generation in all cities = + 33% de génération de Personnages illustres dans toutes les villes
 
 Mint = Hôtel de la monnaie
@@ -364,9 +364,9 @@ Militaristic = Militarisée
 Type:  = Type : 
 Influence:  = Influence:
  # Requires translation!
-Reach 30 for friendship. = 
+Reach 30 for friendship. = Atteignez 30 pour être amis.
  # Requires translation!
-Reach highest influence above 60 for alliance. = 
+Reach highest influence above 60 for alliance. = Atteignez 60 (max) pour être alliés.
 Ally:  = Allié :
 
 # Trades 
@@ -497,7 +497,7 @@ Map type = Type de carte
 Generated = Généré
 Existing = Existant
  # Requires translation!
-Map generation type = 
+Map generation type = Type de carte générée
 Number of city-states = Nombre de cité-état
 One City Challenge = Défi ville unique
 No barbarians = Aucun barbare
@@ -587,9 +587,9 @@ Map uploaded successfully! = Carte téléchargée avec succès !
 Options = Options
 Display options = Options d'affichage
  # Requires translation!
-Gameplay options = 
+Gameplay options = Options de jeu
  # Requires translation!
-Other options = 
+Other options = Autres options
 Turns between autosaves = Tours avant sauvegarde automatique
 Sound effects volume = Volume sonore
 Music volume = Volume de la musique
@@ -778,7 +778,7 @@ Great person points = Points de personnage illustre
 Current points = Points actuelles
 Points per turn = Points par tours
  # Requires translation!
-Convert production to gold at a rate of 4 to 1 = 
+Convert production to gold at a rate of 4 to 1 = Convertie la production en or au taux de 4 pour 1
 Convert production to science at a rate of 4 to 1 = Convertie la production en science au taux de 4 pour 1
 The city will not produce anything. = La cité ne produira plus rien
 
@@ -1258,10 +1258,10 @@ Great Barrier Reef = Grande Barrière de Corail
 Krakatoa = Krakatoa
 Mount Fuji = Mont Fuji
  # Requires translation!
-Old Faithful = 
+Old Faithful = Old Faithful
 Rock of Gibraltar = Rocher de Gibraltar
  # Requires translation!
-Cerro de Potosi = 
+Cerro de Potosi = Cerro de Potosi
 El Dorado = El Dorado
 Fountain of Youth = Fontaine de Jouvence
 
