--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -758,14 +758,14 @@ Specialists = Specjaliści
 Food eaten = Żywność zjedzona
 Growth bonus = Bonus do rośnięcia
 Unassigned population = Nieprzydzieleni cywile
-[turnsToExpansion] turns to expansion = [turnsToExpansion] tur do ekspansji
+[turnsToExpansion] turns to expansion = Ilość tur do ekspansji: [turnsToExpansion] 
 Stopped expansion = Zatrzymana ekspansja
-[turnsToPopulation] turns to new population = [turnsToPopulation] tur do nowej populacji
+[turnsToPopulation] turns to new population = Ilość tur nowej populacji: [turnsToPopulation] 
 Food converts to production = Przetwarzanie żywności na produkcje
-[turnsToStarvation] turns to lose population = [turnsToStarvation] tur do utraty populacji
+[turnsToStarvation] turns to lose population =  Ilość tur do utraty populacji: [turnsToStarvation]
 Stopped population growth = Zatrzymane rośnięcie populacji
  # Requires translation!
-In resistance for another [numberOfTurns] turns = 
+In resistance for another [numberOfTurns] turns = W oporze przez następne tur: [numerOfTurns]
 Sell for [sellAmount] gold = Sprzedaj za [sellAmount] złota
 Are you sure you want to sell this [building]? = Aby czy na pewno chcesz sprzedać [buildings]?
 [greatPerson] points = Punkty [greatPerson]
@@ -787,7 +787,7 @@ Buildings enabled = Udostępnia budynki
 Wonder = Cud
 National Wonder = Narodowy cud
 National Wonders = Narodowe cuda
-Wonders enabled = Cuda włączone
+Wonders enabled = Udostępnia cuda
 Tile improvements enabled = Dostępne ulepszenia pól
 Reveals [resource] on the map = Ujawnia [resource] na mapie
 XP for new units = XP za nowe jednostki
@@ -798,14 +798,12 @@ City health = Zrowie miasta
 Occupied! = Okupowane!
 Attack = Atak
 Bombard = Bombardowanie
- # Requires translation!
-NUKE = //needed context, Nuke a city, or atomic bomb
+NUKE = BOMBARDOWANIE ATOMOWE
 Captured! = Zdobyte!
 defence vs ranged = obrona a obrona na odległość
 [percentage] to unit defence = [percentage] do obrony jednostki
 Attacker Bonus = Bonus Atakującego
- # Requires translation!
-Landing = //needed context, landing as a parachutist or more like landing forces
+Landing = Lądowanie
 Flanking = Flankowanie
 vs [unitType] = kontra [unitType]
 Terrain = Teren
@@ -834,12 +832,12 @@ Final = Finalny
 Other = Inne
 Population = Populacja
 City States = Państwa miasta
-Tile yields = Pole pola
+Tile yields = Pola
 Trade routes = Szlaki handlowe
 Maintenance = Utrzymanie
 Transportation upkeep = Utrzymanie transportu
 Unit upkeep = Utrzymanie Jednostek
-Trades = Handlowe
+Trades = Wymiany
 Units = Jednostki
 Name = Nazwa
 Closest city = Najbliższe miasto
@@ -1102,7 +1100,7 @@ Theology = Teologia
 Civil Service = Służba cywilna
 'The only thing that saves us from the bureaucracy is it inefficiency' - Eugene McCarthy = 'Przed biurokracją ratuje nas jedynie jej nieefektywność.' – Eugene McCarthy
 Enables Open Borders agreements = Pozwala na układ o otwartych granicach
-Guilds = Gildii
+Guilds = Gildie
 'The merchants and the traders have come; their profits are pre-ordained...' - Sri Guru Granth Sahib = 'Przybyli kupcy i handlarze. Ich zyski są z góry ustalone...' - Sri Guru Granth Sahib
 Physics = Fizyka
 'Measure what is measurable, and make measurable what is not so.' - Galileo Galilei = 'Zmierz, co jest mierzalne, i uczyń mierzalnym to, co takim nie jest.' – Galileusz
@@ -1247,7 +1245,7 @@ Snow = Zaśnieżone
 Coast = Wybrzeże
 Ocean = Ocean
 Flood plains = Mokradła
-Impassible = Nieprzebyte
+Impassible = Nieosiągalna
 
 # Natural Wonders
 
@@ -1295,7 +1293,7 @@ Whales = Wieloryby
 Copper = Miedź
 Cocoa = Kakao
 Crab = Krab
-Citrus = Cytrus
+Citrus = Cytrusy
 Truffles = Trufle
 Farm = Farma
 Lumber mill = Tartak
