--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -16,6 +16,8 @@ Conquer a city!\nBring an enemy city down to low health > \nEnter the city with 
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Переместите воздушый юнит!\nВыберите воздушный юнит > Выберите другой город в доступном радиусе > \nПереместите юнит в другой город
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Посмотрите вашу статистику!\nОткройте экран обзора (верхний правый угол) >\nНажмите на 'Статистика'
 
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = О нет! Кажется всё что-то пошло КАТАСТРОФИЧЕСКИ плохо! Это АБСОЛЮТНО не должно было произойти! Пожалуйста отправьте мне (yairm210@hotmail.com) емейл с информацией об игре (меню -> сохранить игру -> скопируйте информацию об игре -> вставьте в емейл) и я попытаюсь это исправить настолько быстро как я могу!
+
 # Buildings
 
 ## Ancient era buildings
