--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -17,6 +17,8 @@ Conquer a city!\nBring an enemy city down to low health > \nEnter the city with 
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Перемістіть повітряний підрозділ!\nВиберіть його !\n виберіть інше місто в радіусі дії > \nПеремість підрозділ в інше місто
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Подивіться статистику\nУвійдіть до екрану огляну (верхній правий вугол) >\nНатисніть на «Статистика»
 
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = Трясця! Схоже щось пішло КАТАСТРОФІЧНО неправильно! Цього АБСОЛЮТНО НЕ ПОВИННО БУЛО СТАТИСЯ! Будь ласка, надішліть мені (yairm210@hotmail.com) електронний лист з ігровою інформацією (меню -> зберегти гру -> копіювати інформацію про гру -> вставити до email) і я спробую виправити якнайшвидше!
+
 # Buildings
 
 ## Ancient era buildings
@@ -646,9 +648,7 @@ Map uploaded successfully! = Мапа вивантажена успішно!
 
 Options = Налаштування
 Display options = Налаштування екрану
- # Requires translation!
 Gameplay options = Налаштування ігроладу
- # Requires translation!
 Other options = Інші налаштування
 Turns between autosaves = Ходів між автозбереженням
 Sound effects volume = Гучність звуків
@@ -874,7 +874,6 @@ vs [unitType] = проти [unitType]
 Terrain = Місцевість
 
 
- # Requires translation!
 Hurry Research = Поспішайте з дослідженнями
 Conduct Trade Mission = Проведення торговельної угоди
 Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = Ваша торгова місія з цивілізіцією «[civName]» принесла вам [goldAmount] золота та [influenceAmount] впливу!
@@ -1576,25 +1575,16 @@ Impassible = Непрохідні
 
 # Natural Wonders
 
- # Requires translation!
 Barringer Crater = Аризонський кратер
- # Requires translation!
 Grand Mesa = Велика меса
- # Requires translation!
 Great Barrier Reef = Великий бар'єрний риф
- # Requires translation!
 Krakatoa = Кракатау
- # Requires translation!
 Mount Fuji = Гора Фудзі
  # Requires translation!
 Old Faithful = 
- # Requires translation!
 Rock of Gibraltar = Гібралтарська скеля
- # Requires translation!
 Cerro de Potosi = Серро-Ріко
- # Requires translation!
 El Dorado = Ельдорадо 
- # Requires translation!
 Fountain of Youth = Джерело вічної молодості
 
 # Resources
@@ -1797,7 +1787,6 @@ Unbuildable = Неможливо створити
 Can start an 8-turn golden age = Може почати золотий вік на 8 ходів
 Can build improvement: Landmark = Може будувати вдосконалення: Визначна пам’ятка
 Great Scientist = Видатний науковець
- # Requires translation!
 Can hurry technology research = Може пришвидшити технологічне дослідження
 Can build improvement: Academy = Може будувати вдосконалення: Академія
 Great Merchant = Видатний торговець
@@ -1812,7 +1801,8 @@ Bonus for units in 2 tile radius 15% = Підрозділи в радіусі 2 
 # Promotions
 
 Pick promotion = Обрати поліпшення
-OR  =  АБО 
+ # Requires translation!
+ OR  = 
 Bonus vs [unitType] = Перевага проти типу: [unitType]
 Penalty vs [unitType] = Поступається підрозділам типу: [unitType]
 Accuracy I = Точність I
