--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -16,6 +16,8 @@ Conquer a city!\nBring an enemy city down to low health > \nEnter the city with 
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Déplacez une unité aérienne !\nSéléctionnez une unité aérienne > Séléctionnez une autre cité à portée > \nDéplacez l'unité vers l'autre cité
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Observez vos statistiques en détail !\n Allez dans la vue d'ensemble (dans le coin en haut à droite) >\nCliquez sur 'Statistiques'
 
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = Oh non ! On dirait que quelque chose ne s'est ABSOLUMENT pas passé comme prévu !  Ce n'est pas censé arriver ! S'il vous plaît, envoyez un mail à yairm210@hotmail.com avec les informations de la partie (Menu (en haut à gauche) -> Charger une partie -> Copy saved game to clipboard -> Copier dans le mail) et j'essayerai de régler cela aussi vite que possible !
+
 # Buildings
 
 ## Ancient era buildings
