--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -17,6 +17,8 @@ Conquer a city!\nBring an enemy city down to low health > \nEnter the city with 
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Sposta un'unità aerea!\nSeleziona un'unità aerea > Seleziona un'altra Città nel suo raggio > \nSposta l'unità in quell'altra Città.
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Visualizza le tue statistiche!\nEntra nella tua schermata Panoramica (in alto a sinistra)\nClicca su 'Statistiche'
 
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = Santi numi! Pare che qualcosa sia andato disastrosamente storto! Quello che è successo non era assolutamente previsto! Mandami un'email all'indirizzo yairm210@hotmail.com con l'info della partita (menu -> salva partita -> copia info partita -> incolla su email) e proverò a riparare il guasto il più in fretta possibile!
+
 # Buildings
 
 ## Ancient era buildings
