--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -20,6 +20,8 @@ Move an air unit!\nSelect an air unit > select another city withing range > \nMo
  # Requires translation!
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 
 
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = O nie! Wygląda na to że coś przegapiłem! To absolutnie nie powinno się wydarzyć! Wyślij mi proszę (yairm210@hotmail.com) maila z informacją o grze (menu -> zapisz grę -> skopiuj informacje o grze -> wklej do maila) a ja postaram się to naprawić. Dziękuję za pomoc.
+
 # Buildings
 
 ## Ancient era buildings
