--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -30,6 +30,9 @@ Move an air unit!\nSelect an air unit > select another city withing range > \nMo
  # Requires translation!
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 
 
+ # Requires translation!
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = 
+
 # Buildings
 
 ## Ancient era buildings
