--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -16,6 +16,8 @@ Conquer a city!\nBring an enemy city down to low health > \nEnter the city with 
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = 移動空軍單位!\n選擇一個空軍單位 > 選取移動範圍內的其他城市 > \n將單位移至該城市
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 查看當前文明詳細信息!\n點擊概覽按鈕(右上角) >\n點擊"統計"
 
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = NO!看起来游戏好像出现了灾难性的Bug!这绝对不应该发生!请将游戏存档信息发送给我，方法如下：依次点击“菜单->保存游戏->复制当前游戏数据到剪贴板”，将剪贴板的内容通过email发送给我。我的email地址：yairm210@hotmail.com。我会尽快处理!
+
 # Buildings
 
 ## Ancient era buildings
