Update German.properties (#1490)

--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -183,7 +183,7 @@ Leaning Tower of Pisa = Schiefer Turm von Pisa
 Free Great Person = Kostenlose große Persönlichkeit
 Choose a free great person = Wähle eine kostenlose große Persönlichkeit
  # Requires translation!
-Get  = 
+Get  = Erhalten
 
 Himeji Castle = Schloss Himeji
  # Requires translation!
@@ -197,7 +197,7 @@ Empire enters golden age = Es beginnt ein Goldenes Zeitalter
 Windmill = Windmühle
 Must not be on hill = Darf sich nicht auf einem Hügel befinden
  # Requires translation!
-Museum = 
+Museum = Museum
 Hermitage = Einsiedelei
 
 The Louvre = Der Louvre
@@ -593,9 +593,9 @@ Map uploaded successfully! = Karte hochladen war erfolgreich!
 Options = Optionen
 Display options = Anzeigeeinstellungen
  # Requires translation!
-Gameplay options = 
+Gameplay options = Spielmechanikeinstellungen
  # Requires translation!
-Other options = 
+Other options = Andere Einstellungen
 Turns between autosaves = Runden bis zum nächsten automatischen Speichern
 Sound effects volume = Lautstärke Soundeffekte
 Music volume = Lautstärke Musik
@@ -821,7 +821,7 @@ Terrain = Gelände
 
 
  # Requires translation!
-Hurry Research = 
+Hurry Research = Forschung beschleunigen
 Conduct Trade Mission = Handelsmission durchführen
 Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = Deine Handelsmission zu [civName] hat dir [goldAmount] Gold und [influenceAmount] Einfluss eingebracht!
 Hurry Wonder = Wunder beschleunigen
@@ -1267,25 +1267,25 @@ Impassible = Unpassierbar
 # Natural Wonders
 
  # Requires translation!
-Barringer Crater = 
+Barringer Crater = Barringer-Krater
  # Requires translation!
-Grand Mesa = 
+Grand Mesa = Grand Mesa
  # Requires translation!
-Great Barrier Reef = 
+Great Barrier Reef = Great Barrier Reef
  # Requires translation!
-Krakatoa = 
+Krakatoa = Krakatau
  # Requires translation!
-Mount Fuji = 
+Mount Fuji = Fuji
  # Requires translation!
-Old Faithful = 
+Old Faithful = Old Faithful
  # Requires translation!
-Rock of Gibraltar = 
+Rock of Gibraltar = Felsen von Gibraltar
  # Requires translation!
-Cerro de Potosi = 
+Cerro de Potosi = Cerro de Potosí
  # Requires translation!
-El Dorado = 
+El Dorado = El Dorado
  # Requires translation!
-Fountain of Youth = 
+Fountain of Youth = Jungbrunnen
 
 # Resources
 
@@ -1488,7 +1488,7 @@ Can start an 8-turn golden age = Kann ein Goldenes Zeitalter über 8 Runden star
 Can build improvement: Landmark = Kann Verbesserung errichten: Sehenswürdigkeit
 Great Scientist = Große(r) Wissenschaftler(in)
  # Requires translation!
-Can hurry technology research = 
+Can hurry technology research = Kann Erforschung von Technologien beschleunigen
 Can build improvement: Academy = Kann Verbesserung errichten: Akademie
 Great Merchant = Große(r) Händler(in)
 Can undertake a trade mission with City-State, giving a large sum of gold and [influenceAmount] Influence = Kann eine Handelsmission mit dem Stadtstaat durchführen, die eine große Summe Gold und [influenceAmount] Einfluss gibt.
@@ -1589,4 +1589,4 @@ Ambush II = Lufthinterhalt II
 Haka War Dance = Haka Kriegstanz
 -10% combat strength for adjacent enemy units = -10% Kampfstärke für angrenzende feindliche Einheiten
  # Requires translation!
-Rejuvenation = 
+Rejuvenation = Verjüngung
